nuclearbomb/namespaces/default/hermes/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hermes
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "hermes.hiibolt.com"
  rules:
    - backendRefs:
        - name: hermes
          port: 9119
